--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-.btn-container {
-  display: flex;
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
 }
